Added localization to the gamerules.

--- a/localization/english/strawbs_remove_permafrost_l_english.yml
+++ b/localization/english/strawbs_remove_permafrost_l_english.yml
@@ -20,3 +20,51 @@
   strawb_add_permafrost_selection_tooltip: "Add permafrost to a county."
   strawb_add_permafrost_toast: "Added Permafrost to [text_title.GetName]"
   strawb_add_permafrost_toast_desc: "Using various rituals, [text_title.GetName] has been affected by permafrost."
+
+  rule_remove_permafrost_gold_cost: "Remove Permafrost @gold_icon! cost"
+  setting_remove_permafrost_gold_cost_1_00: "x1 (Default)"
+  setting_remove_permafrost_gold_cost_1_00_desc: "Each county costs 50 @gold_icon! Gold to change. (Default)"
+  setting_remove_permafrost_gold_cost_0_75: "x0.75"
+  setting_remove_permafrost_gold_cost_0_75_desc: "Each county costs approximately 38 @gold_icon! Gold to change."
+  setting_remove_permafrost_gold_cost_0_50: "x0.50"
+  setting_remove_permafrost_gold_cost_0_50_desc: "Each county costs 25 @gold_icon! Gold to change."
+  setting_remove_permafrost_gold_cost_0_00: "Free"
+  setting_remove_permafrost_gold_cost_0_00_desc: "Each county is free to change."
+  setting_remove_permafrost_gold_cost_2_00: "x2"
+  setting_remove_permafrost_gold_cost_2_00_desc: "Each county costs 100 @gold_icon! Gold to change."
+
+  rule_remove_permafrost_herd_cost: "Remove Permafrost @herd_icon! cost"
+  setting_remove_permafrost_herd_cost_1_00: "x1 (Default)"
+  setting_remove_permafrost_herd_cost_1_00_desc: "Each county costs 500 @herd_icon! Herd to change. (Default)"
+  setting_remove_permafrost_herd_cost_0_75: "x0.75"
+  setting_remove_permafrost_herd_cost_0_75_desc: "Each county costs approximately 375 @herd_icon! Herd to change."
+  setting_remove_permafrost_herd_cost_0_50: "x0.50"
+  setting_remove_permafrost_herd_cost_0_50_desc: "Each county costs 250 @herd_icon! Herd to change."
+  setting_remove_permafrost_herd_cost_0_00: "Free"
+  setting_remove_permafrost_herd_cost_0_00_desc: "Each county is free to change."
+  setting_remove_permafrost_herd_cost_2_00: "x2"
+  setting_remove_permafrost_herd_cost_2_00_desc: "Each county costs 1000 @herd_icon! Herd to change."
+
+  rule_remove_permafrost_prestige_cost: "Remove Permafrost @prestige_icon! cost"
+  setting_remove_permafrost_prestige_cost_1_00: "x1 (Default)"
+  setting_remove_permafrost_prestige_cost_1_00_desc: "Each county costs 250 @prestige_icon! Herd to change. (Default)"
+  setting_remove_permafrost_prestige_cost_0_75: "x0.75"
+  setting_remove_permafrost_prestige_cost_0_75_desc: "Each county costs approximately 188 @prestige_icon! Herd to change."
+  setting_remove_permafrost_prestige_cost_0_50: "x0.50"
+  setting_remove_permafrost_prestige_cost_0_50_desc: "Each county costs 125 @prestige_icon! Herd to change."
+  setting_remove_permafrost_prestige_cost_0_00: "Free"
+  setting_remove_permafrost_prestige_cost_0_00_desc: "Each county is free to change."
+  setting_remove_permafrost_prestige_cost_2_00: "x2"
+  setting_remove_permafrost_prestige_cost_2_00_desc: "Each county costs 500 @prestige_icon! Herd to change."
+
+  rule_allow_remove_all_permafrost_decision: "#EMP Remove all Permafrost#! decision"
+  setting_allow_remove_all_permafrost_decision_yes: "Enabled"
+  setting_allow_remove_all_permafrost_decision_yes_desc: "Enables the #EMP Remove all Permafrost#! decision, which removes all permafrost on the map."
+  setting_allow_remove_all_permafrost_decision_no: "Disabled"
+  setting_allow_remove_all_permafrost_decision_no_desc: "Disables the #EMP Remove all Permafrost#! decision."
+
+  rule_enable_permafrost_adder: "Enable the #EMP Permafrost Adder#!"
+  setting_enable_permafrost_adder_yes: "Enabled"
+  setting_enable_permafrost_adder_yes_desc: "Enables the #EMP Add Permafrost#! decision, that allows you to add permafrost to any of your owned counties."
+  setting_enable_permafrost_adder_no: "Disabled"
+  setting_enable_permafrost_adder_no_desc: "Disables the #EMP Add Permafrost#! decision."
