--- a/localization/french/strawbs_remove_permafrost_l_french.yml
+++ b/localization/french/strawbs_remove_permafrost_l_french.yml
@@ -20,3 +20,51 @@
   strawb_add_permafrost_selection_tooltip: "Ajouter du pergélisol à un comté."
   strawb_add_permafrost_toast: "Pergélisol ajouté à [text_title.GetName]"
   strawb_add_permafrost_toast_desc: "Grâce à divers rituels, [text_title.GetName] est désormais recouvert de pergélisol."
+
+  rule_remove_permafrost_gold_cost: "Coût pour retirer le pergélisol @gold_icon!"
+  setting_remove_permafrost_gold_cost_1_00: "x1 (Par défaut)"
+  setting_remove_permafrost_gold_cost_1_00_desc: "Chaque comté coûte 50 @gold_icon! d’or pour le modifier. (Par défaut)"
+  setting_remove_permafrost_gold_cost_0_75: "x0.75"
+  setting_remove_permafrost_gold_cost_0_75_desc: "Chaque comté coûte environ 38 @gold_icon! d’or pour le modifier."
+  setting_remove_permafrost_gold_cost_0_50: "x0.50"
+  setting_remove_permafrost_gold_cost_0_50_desc: "Chaque comté coûte 25 @gold_icon! d’or pour le modifier."
+  setting_remove_permafrost_gold_cost_0_00: "Gratuit"
+  setting_remove_permafrost_gold_cost_0_00_desc: "Chaque comté peut être modifié gratuitement."
+  setting_remove_permafrost_gold_cost_2_00: "x2"
+  setting_remove_permafrost_gold_cost_2_00_desc: "Chaque comté coûte 100 @gold_icon! d’or pour le modifier."
+
+  rule_remove_permafrost_herd_cost: "Coût pour retirer le pergélisol @herd_icon!"
+  setting_remove_permafrost_herd_cost_1_00: "x1 (Par défaut)"
+  setting_remove_permafrost_herd_cost_1_00_desc: "Chaque comté coûte 500 @herd_icon! de Troupeau pour le modifier. (Par défaut)"
+  setting_remove_permafrost_herd_cost_0_75: "x0.75"
+  setting_remove_permafrost_herd_cost_0_75_desc: "Chaque comté coûte environ 375 @herd_icon! de Troupeau pour le modifier."
+  setting_remove_permafrost_herd_cost_0_50: "x0.50"
+  setting_remove_permafrost_herd_cost_0_50_desc: "Chaque comté coûte 250 @herd_icon! de Troupeau pour le modifier."
+  setting_remove_permafrost_herd_cost_0_00: "Gratuit"
+  setting_remove_permafrost_herd_cost_0_00_desc: "Chaque comté peut être modifié gratuitement."
+  setting_remove_permafrost_herd_cost_2_00: "x2"
+  setting_remove_permafrost_herd_cost_2_00_desc: "Chaque comté coûte 1000 @herd_icon! de Troupeau pour le modifier."
+
+  rule_remove_permafrost_prestige_cost: "Coût pour retirer le pergélisol @prestige_icon!"
+  setting_remove_permafrost_prestige_cost_1_00: "x1 (Par défaut)"
+  setting_remove_permafrost_prestige_cost_1_00_desc: "Chaque comté coûte 250 @prestige_icon! de Prestige pour le modifier. (Par défaut)"
+  setting_remove_permafrost_prestige_cost_0_75: "x0.75"
+  setting_remove_permafrost_prestige_cost_0_75_desc: "Chaque comté coûte environ 188 @prestige_icon! de Prestige pour le modifier."
+  setting_remove_permafrost_prestige_cost_0_50: "x0.50"
+  setting_remove_permafrost_prestige_cost_0_50_desc: "Chaque comté coûte 125 @prestige_icon! de Prestige pour le modifier."
+  setting_remove_permafrost_prestige_cost_0_00: "Gratuit"
+  setting_remove_permafrost_prestige_cost_0_00_desc: "Chaque comté peut être modifié gratuitement."
+  setting_remove_permafrost_prestige_cost_2_00: "x2"
+  setting_remove_permafrost_prestige_cost_2_00_desc: "Chaque comté coûte 500 @prestige_icon! de Prestige pour le modifier."
+
+  rule_allow_remove_all_permafrost_decision: "#EMP Retirer tout le pergélisol#! décision"
+  setting_allow_remove_all_permafrost_decision_yes: "Activé"
+  setting_allow_remove_all_permafrost_decision_yes_desc: "Active la décision #EMP Retirer tout le pergélisol#!, qui retire tout le pergélisol de la carte."
+  setting_allow_remove_all_permafrost_decision_no: "Désactivé"
+  setting_allow_remove_all_permafrost_decision_no_desc: "Désactive la décision #EMP Retirer tout le pergélisol#!."
+
+  rule_enable_permafrost_adder: "Activer l’#EMP Ajout de Pergélisol#!"
+  setting_enable_permafrost_adder_yes: "Activé"
+  setting_enable_permafrost_adder_yes_desc: "Active la décision #EMP Ajouter du Pergélisol#!, qui permet d’ajouter du pergélisol à n’importe lequel de vos comtés possédés."
+  setting_enable_permafrost_adder_no: "Désactivé"
+  setting_enable_permafrost_adder_no_desc: "Désactive la décision #EMP Ajouter du Pergélisol#!."
