--- a/localization/german/strawbs_remove_permafrost_l_german.yml
+++ b/localization/german/strawbs_remove_permafrost_l_german.yml
@@ -20,3 +20,51 @@
   strawb_add_permafrost_selection_tooltip: "Permafrost einer Grafschaft zufügen."
   strawb_add_permafrost_toast: "Permafrost wurde [text_title.GetName] zugefügt"
   strawb_add_permafrost_toast_desc: "Durch die Anwendung verschiedener Rituale wurde [text_title.GetName] vom Permafrost befallen."
+
+  rule_remove_permafrost_gold_cost: "Permafrost-Entfernung @gold_icon! Goldkosten"
+  setting_remove_permafrost_gold_cost_1_00: "x1 (Standard)"
+  setting_remove_permafrost_gold_cost_1_00_desc: "Jede Grafschaft kostet 50 @gold_icon! Gold zum ändern. (Default)"
+  setting_remove_permafrost_gold_cost_0_75: "x0.75"
+  setting_remove_permafrost_gold_cost_0_75_desc: "Jede Grafschaft kostet ungefähr 38 @gold_icon! Gold zum ändern."
+  setting_remove_permafrost_gold_cost_0_50: "x0.50"
+  setting_remove_permafrost_gold_cost_0_50_desc: "Jede Grafschaft kostet 25 @gold_icon! Gold zum ändern."
+  setting_remove_permafrost_gold_cost_0_00: "Free"
+  setting_remove_permafrost_gold_cost_0_00_desc: "Jede Grafschaft ist frei zu ändern."
+  setting_remove_permafrost_gold_cost_2_00: "x2"
+  setting_remove_permafrost_gold_cost_2_00_desc: "Jede Grafschaft kostet 100 @gold_icon! Gold zum ändern."
+
+  rule_remove_permafrost_herd_cost: "Permafrost-Entfernung @herd_icon! Herdekosten"
+  setting_remove_permafrost_herd_cost_1_00: "x1 (Default)"
+  setting_remove_permafrost_herd_cost_1_00_desc: "Jede Grafschaft kostet 50 @herd_icon! Herde zum ändern. (Default)"
+  setting_remove_permafrost_herd_cost_0_75: "x0.75"
+  setting_remove_permafrost_herd_cost_0_75_desc: "Jede Grafschaft kostet ungefähr 375 @herd_icon! Herde zum ändern."
+  setting_remove_permafrost_herd_cost_0_50: "x0.50"
+  setting_remove_permafrost_herd_cost_0_50_desc: "Jede Grafschaft kostet 250 @herd_icon! Herde zum ändern."
+  setting_remove_permafrost_herd_cost_0_00: "Free"
+  setting_remove_permafrost_herd_cost_0_00_desc: "Jede Grafschaft ist frei zu ändern."
+  setting_remove_permafrost_herd_cost_2_00: "x2"
+  setting_remove_permafrost_herd_cost_2_00_desc: "Jede Grafschaft kostet 100 @herd_icon! Herde zum ändern."
+
+  rule_remove_permafrost_prestige_cost: "Permafrost-Entfernung @prestige_icon! Prestigekosten"
+  setting_remove_permafrost_prestige_cost_1_00: "x1 (Default)"
+  setting_remove_permafrost_prestige_cost_1_00_desc: "Jede Grafschaft kostet 250 @prestige_icon! Prestige zum ändern. (Default)"
+  setting_remove_permafrost_prestige_cost_0_75: "x0.75"
+  setting_remove_permafrost_prestige_cost_0_75_desc: "Jede Grafschaft kostet ungefähr 188 @prestige_icon! Prestige zum ändern."
+  setting_remove_permafrost_prestige_cost_0_50: "x0.50"
+  setting_remove_permafrost_prestige_cost_0_50_desc: "Jede Grafschaft kostet 125 @prestige_icon! Prestige zum ändern."
+  setting_remove_permafrost_prestige_cost_0_00: "Free"
+  setting_remove_permafrost_prestige_cost_0_00_desc: "Jede Grafschaft ist frei zu ändern."
+  setting_remove_permafrost_prestige_cost_2_00: "x2"
+  setting_remove_permafrost_prestige_cost_2_00_desc: "Jede Grafschaft kostet 500 @prestige_icon! Prestige zum ändern."
+
+  rule_allow_remove_all_permafrost_decision: "#EMP Jeden Permafrost entfernen#! Entscheidung"
+  setting_allow_remove_all_permafrost_decision_yes: "Aktiviert"
+  setting_allow_remove_all_permafrost_decision_yes_desc: "Ermöglicht das Auswählen der #EMP Jeden Permafrost entfernen#! Entscheidung, welche den Permafrost der gesamten Karte entfernt."
+  setting_allow_remove_all_permafrost_decision_no: "Deaktiviert"
+  setting_allow_remove_all_permafrost_decision_no_desc: "Deaktiviert die #EMP Jeden Permafrost entfernen#! Entscheidung."
+
+  rule_enable_permafrost_adder: "Aktiviere die #EMP Permafrost herbeibringen#! Entscheidung"
+  setting_enable_permafrost_adder_yes: "Aktiv"
+  setting_enable_permafrost_adder_yes_desc: "Ermöglicht das Auswählen der #EMP Permafrost herbeibringen#! Entscheidung, welche es ermöglicht, den Permafrost zu jeder besessener Grafschaft hinzu zu fügen."
+  setting_enable_permafrost_adder_no: "Deaktiviert"
+  setting_enable_permafrost_adder_no_desc: "Deaktiviert die #EMP Permafrost herbeibringen#! Entscheidung."
