--- a/localization/russian/strawbs_remove_permafrost_l_russian.yml
+++ b/localization/russian/strawbs_remove_permafrost_l_russian.yml
@@ -20,3 +20,51 @@
   strawb_add_permafrost_selection_tooltip: "Добавить вечную мерзлоту в графство."
   strawb_add_permafrost_toast: "Вечная мерзлота добавлена в [text_title.GetName]"
   strawb_add_permafrost_toast_desc: "Благодаря различным ритуалам [text_title.GetName] теперь покрыто вечной мерзлотой."
+
+  rule_remove_permafrost_gold_cost: "Стоимость удаления вечной мерзлоты @gold_icon!"
+  setting_remove_permafrost_gold_cost_1_00: "x1 (По умолчанию)"
+  setting_remove_permafrost_gold_cost_1_00_desc: "Каждое графство стоит 50 @gold_icon! золота для изменения. (По умолчанию)"
+  setting_remove_permafrost_gold_cost_0_75: "x0.75"
+  setting_remove_permafrost_gold_cost_0_75_desc: "Каждое графство стоит примерно 38 @gold_icon! золота для изменения."
+  setting_remove_permafrost_gold_cost_0_50: "x0.50"
+  setting_remove_permafrost_gold_cost_0_50_desc: "Каждое графство стоит 25 @gold_icon! золота для изменения."
+  setting_remove_permafrost_gold_cost_0_00: "Бесплатно"
+  setting_remove_permafrost_gold_cost_0_00_desc: "Каждое графство можно изменить бесплатно."
+  setting_remove_permafrost_gold_cost_2_00: "x2"
+  setting_remove_permafrost_gold_cost_2_00_desc: "Каждое графство стоит 100 @gold_icon! золота для изменения."
+
+  rule_remove_permafrost_herd_cost: "Стоимость удаления вечной мерзлоты @herd_icon!"
+  setting_remove_permafrost_herd_cost_1_00: "x1 (По умолчанию)"
+  setting_remove_permafrost_herd_cost_1_00_desc: "Каждое графство стоит 500 @herd_icon! стада для изменения. (По умолчанию)"
+  setting_remove_permafrost_herd_cost_0_75: "x0.75"
+  setting_remove_permafrost_herd_cost_0_75_desc: "Каждое графство стоит примерно 375 @herd_icon! стада для изменения."
+  setting_remove_permafrost_herd_cost_0_50: "x0.50"
+  setting_remove_permafrost_herd_cost_0_50_desc: "Каждое графство стоит 250 @herd_icon! стада для изменения."
+  setting_remove_permafrost_herd_cost_0_00: "Бесплатно"
+  setting_remove_permafrost_herd_cost_0_00_desc: "Каждое графство можно изменить бесплатно."
+  setting_remove_permafrost_herd_cost_2_00: "x2"
+  setting_remove_permafrost_herd_cost_2_00_desc: "Каждое графство стоит 1000 @herd_icon! стада для изменения."
+
+  rule_remove_permafrost_prestige_cost: "Стоимость удаления вечной мерзлоты @prestige_icon!"
+  setting_remove_permafrost_prestige_cost_1_00: "x1 (По умолчанию)"
+  setting_remove_permafrost_prestige_cost_1_00_desc: "Каждое графство стоит 250 @prestige_icon! престижа для изменения. (По умолчанию)"
+  setting_remove_permafrost_prestige_cost_0_75: "x0.75"
+  setting_remove_permafrost_prestige_cost_0_75_desc: "Каждое графство стоит примерно 188 @prestige_icon! престижа для изменения."
+  setting_remove_permafrost_prestige_cost_0_50: "x0.50"
+  setting_remove_permafrost_prestige_cost_0_50_desc: "Каждое графство стоит 125 @prestige_icon! престижа для изменения."
+  setting_remove_permafrost_prestige_cost_0_00: "Бесплатно"
+  setting_remove_permafrost_prestige_cost_0_00_desc: "Каждое графство можно изменить бесплатно."
+  setting_remove_permafrost_prestige_cost_2_00: "x2"
+  setting_remove_permafrost_prestige_cost_2_00_desc: "Каждое графство стоит 500 @prestige_icon! престижа для изменения."
+
+  rule_allow_remove_all_permafrost_decision: "Решение #EMP Удалить всю вечную мерзлоту#!"
+  setting_allow_remove_all_permafrost_decision_yes: "Включено"
+  setting_allow_remove_all_permafrost_decision_yes_desc: "Включает решение #EMP Удалить всю вечную мерзлоту#!, которое удаляет всю мерзлоту на карте."
+  setting_allow_remove_all_permafrost_decision_no: "Отключено"
+  setting_allow_remove_all_permafrost_decision_no_desc: "Отключает решение #EMP Удалить всю вечную мерзлоту#!."
+
+  rule_enable_permafrost_adder: "Включить #EMP Добавление мерзлоты#!"
+  setting_enable_permafrost_adder_yes: "Включено"
+  setting_enable_permafrost_adder_yes_desc: "Включает решение #EMP Добавить мерзлоту#!, позволяющее добавлять мерзлоту в любые принадлежащие вам графства."
+  setting_enable_permafrost_adder_no: "Отключено"
+  setting_enable_permafrost_adder_no_desc: "Отключает решение #EMP Добавить мерзлоту#!."
