--- a/localization/simp_chinese/strawbs_remove_permafrost_l_simp_chinese.yml
+++ b/localization/simp_chinese/strawbs_remove_permafrost_l_simp_chinese.yml
@@ -20,3 +20,51 @@
   strawb_add_permafrost_selection_tooltip: "向一个县添加永久冻土。"
   strawb_add_permafrost_toast: "[text_title.GetName] 已添加永久冻土"
   strawb_add_permafrost_toast_desc: "通过各种仪式，[text_title.GetName] 已被永久冻土覆盖。"
+
+  rule_remove_permafrost_gold_cost: "移除永久冻土的 @gold_icon! 花费"
+  setting_remove_permafrost_gold_cost_1_00: "x1（默认）"
+  setting_remove_permafrost_gold_cost_1_00_desc: "修改每个县需要 50 @gold_icon! 金。（默认）"
+  setting_remove_permafrost_gold_cost_0_75: "x0.75"
+  setting_remove_permafrost_gold_cost_0_75_desc: "修改每个县大约需要 38 @gold_icon! 金。"
+  setting_remove_permafrost_gold_cost_0_50: "x0.50"
+  setting_remove_permafrost_gold_cost_0_50_desc: "修改每个县需要 25 @gold_icon! 金。"
+  setting_remove_permafrost_gold_cost_0_00: "免费"
+  setting_remove_permafrost_gold_cost_0_00_desc: "修改每个县不需要花费。"
+  setting_remove_permafrost_gold_cost_2_00: "x2"
+  setting_remove_permafrost_gold_cost_2_00_desc: "修改每个县需要 100 @gold_icon! 金。"
+
+  rule_remove_permafrost_herd_cost: "移除永久冻土的 @herd_icon! 花费"
+  setting_remove_permafrost_herd_cost_1_00: "x1（默认）"
+  setting_remove_permafrost_herd_cost_1_00_desc: "修改每个县需要 500 @herd_icon! 牲畜。（默认）"
+  setting_remove_permafrost_herd_cost_0_75: "x0.75"
+  setting_remove_permafrost_herd_cost_0_75_desc: "修改每个县大约需要 375 @herd_icon! 牲畜。"
+  setting_remove_permafrost_herd_cost_0_50: "x0.50"
+  setting_remove_permafrost_herd_cost_0_50_desc: "修改每个县需要 250 @herd_icon! 牲畜。"
+  setting_remove_permafrost_herd_cost_0_00: "免费"
+  setting_remove_permafrost_herd_cost_0_00_desc: "修改每个县不需要花费。"
+  setting_remove_permafrost_herd_cost_2_00: "x2"
+  setting_remove_permafrost_herd_cost_2_00_desc: "修改每个县需要 1000 @herd_icon! 牲畜。"
+
+  rule_remove_permafrost_prestige_cost: "移除永久冻土的 @prestige_icon! 花费"
+  setting_remove_permafrost_prestige_cost_1_00: "x1（默认）"
+  setting_remove_permafrost_prestige_cost_1_00_desc: "修改每个县需要 250 @prestige_icon! 声望。（默认）"
+  setting_remove_permafrost_prestige_cost_0_75: "x0.75"
+  setting_remove_permafrost_prestige_cost_0_75_desc: "修改每个县大约需要 188 @prestige_icon! 声望。"
+  setting_remove_permafrost_prestige_cost_0_50: "x0.50"
+  setting_remove_permafrost_prestige_cost_0_50_desc: "修改每个县需要 125 @prestige_icon! 声望。"
+  setting_remove_permafrost_prestige_cost_0_00: "免费"
+  setting_remove_permafrost_prestige_cost_0_00_desc: "修改每个县不需要花费。"
+  setting_remove_permafrost_prestige_cost_2_00: "x2"
+  setting_remove_permafrost_prestige_cost_2_00_desc: "修改每个县需要 500 @prestige_icon! 声望。"
+
+  rule_allow_remove_all_permafrost_decision: "#EMP 移除所有永久冻土#! 决策"
+  setting_allow_remove_all_permafrost_decision_yes: "启用"
+  setting_allow_remove_all_permafrost_decision_yes_desc: "启用 #EMP 移除所有永久冻土#! 决策，能够清除地图上的所有永久冻土。"
+  setting_allow_remove_all_permafrost_decision_no: "禁用"
+  setting_allow_remove_all_permafrost_decision_no_desc: "禁用 #EMP 移除所有永久冻土#! 决策。"
+
+  rule_enable_permafrost_adder: "启用 #EMP 永久冻土添加器#!"
+  setting_enable_permafrost_adder_yes: "启用"
+  setting_enable_permafrost_adder_yes_desc: "启用 #EMP 添加永久冻土#! 决策，使你能够向你拥有的任意县添加永久冻土。"
+  setting_enable_permafrost_adder_no: "禁用"
+  setting_enable_permafrost_adder_no_desc: "禁用 #EMP 添加永久冻土#! 决策。"
