--- a/localization/spanish/strawbs_remove_permafrost_l_spanish.yml
+++ b/localization/spanish/strawbs_remove_permafrost_l_spanish.yml
@@ -20,3 +20,51 @@
   strawb_add_permafrost_selection_tooltip: "Añadir permafrost a un condado."
   strawb_add_permafrost_toast: "Permafrost añadido a [text_title.GetName]"
   strawb_add_permafrost_toast_desc: "Gracias a diversos rituales, [text_title.GetName] ahora está cubierto de permafrost."
+
+  rule_remove_permafrost_gold_cost: "Costo de eliminar el permafrost @gold_icon!"
+  setting_remove_permafrost_gold_cost_1_00: "x1 (Predeterminado)"
+  setting_remove_permafrost_gold_cost_1_00_desc: "Cada condado cuesta 50 @gold_icon! de oro para modificarlo. (Predeterminado)"
+  setting_remove_permafrost_gold_cost_0_75: "x0.75"
+  setting_remove_permafrost_gold_cost_0_75_desc: "Cada condado cuesta aproximadamente 38 @gold_icon! de oro para modificarlo."
+  setting_remove_permafrost_gold_cost_0_50: "x0.50"
+  setting_remove_permafrost_gold_cost_0_50_desc: "Cada condado cuesta 25 @gold_icon! de oro para modificarlo."
+  setting_remove_permafrost_gold_cost_0_00: "Gratis"
+  setting_remove_permafrost_gold_cost_0_00_desc: "Cada condado puede modificarse gratuitamente."
+  setting_remove_permafrost_gold_cost_2_00: "x2"
+  setting_remove_permafrost_gold_cost_2_00_desc: "Cada condado cuesta 100 @gold_icon! de oro para modificarse."
+
+  rule_remove_permafrost_herd_cost: "Costo de eliminar el permafrost @herd_icon!"
+  setting_remove_permafrost_herd_cost_1_00: "x1 (Predeterminado)"
+  setting_remove_permafrost_herd_cost_1_00_desc: "Cada condado cuesta 500 @herd_icon! de Rebaño para modificarlo. (Predeterminado)"
+  setting_remove_permafrost_herd_cost_0_75: "x0.75"
+  setting_remove_permafrost_herd_cost_0_75_desc: "Cada condado cuesta aproximadamente 375 @herd_icon! de Rebaño para modificarlo."
+  setting_remove_permafrost_herd_cost_0_50: "x0.50"
+  setting_remove_permafrost_herd_cost_0_50_desc: "Cada condado cuesta 250 @herd_icon! de Rebaño para modificarlo."
+  setting_remove_permafrost_herd_cost_0_00: "Gratis"
+  setting_remove_permafrost_herd_cost_0_00_desc: "Cada condado puede modificarse gratuitamente."
+  setting_remove_permafrost_herd_cost_2_00: "x2"
+  setting_remove_permafrost_herd_cost_2_00_desc: "Cada condado cuesta 1000 @herd_icon! de Rebaño para modificarse."
+
+  rule_remove_permafrost_prestige_cost: "Costo de eliminar el permafrost @prestige_icon!"
+  setting_remove_permafrost_prestige_cost_1_00: "x1 (Predeterminado)"
+  setting_remove_permafrost_prestige_cost_1_00_desc: "Cada condado cuesta 250 @prestige_icon! de prestigio para modificarse. (Predeterminado)"
+  setting_remove_permafrost_prestige_cost_0_75: "x0.75"
+  setting_remove_permafrost_prestige_cost_0_75_desc: "Cada condado cuesta aproximadamente 188 @prestige_icon! de prestigio para modificarse."
+  setting_remove_permafrost_prestige_cost_0_50: "x0.50"
+  setting_remove_permafrost_prestige_cost_0_50_desc: "Cada condado cuesta 125 @prestige_icon! de prestigio para modificarse."
+  setting_remove_permafrost_prestige_cost_0_00: "Gratis"
+  setting_remove_permafrost_prestige_cost_0_00_desc: "Cada condado puede modificarse gratuitamente."
+  setting_remove_permafrost_prestige_cost_2_00: "x2"
+  setting_remove_permafrost_prestige_cost_2_00_desc: "Cada condado cuesta 500 @prestige_icon! de prestigio para modificarse."
+
+  rule_allow_remove_all_permafrost_decision: "Decisión #EMP Eliminar todo el permafrost#!"
+  setting_allow_remove_all_permafrost_decision_yes: "Habilitado"
+  setting_allow_remove_all_permafrost_decision_yes_desc: "Habilita la decisión #EMP Eliminar todo el permafrost#!, que elimina todo el permafrost del mapa."
+  setting_allow_remove_all_permafrost_decision_no: "Deshabilitado"
+  setting_allow_remove_all_permafrost_decision_no_desc: "Deshabilita la decisión #EMP Eliminar todo el permafrost#!."
+
+  rule_enable_permafrost_adder: "Habilitar el #EMP Añadidor de Permafrost#!"
+  setting_enable_permafrost_adder_yes: "Habilitado"
+  setting_enable_permafrost_adder_yes_desc: "Habilita la decisión #EMP Añadir Permafrost#!, que te permite añadir permafrost a cualquiera de tus condados poseídos."
+  setting_enable_permafrost_adder_no: "Deshabilitado"
+  setting_enable_permafrost_adder_no_desc: "Deshabilita la decisión #EMP Añadir Permafrost#!."
