--- a/localization/japanese/strawbs_remove_permafrost_l_japanese.yml
+++ b/localization/japanese/strawbs_remove_permafrost_l_japanese.yml
@@ -20,3 +20,51 @@
   strawb_add_permafrost_selection_tooltip: "伯爵領に永久凍土を追加する。"
   strawb_add_permafrost_toast: "[text_title.GetName] に永久凍土を追加しました"
   strawb_add_permafrost_toast_desc: "様々な儀式によって、[text_title.GetName] は永久凍土に覆われました。"
+
+  rule_remove_permafrost_gold_cost: "永久凍土除去の @gold_icon! コスト"
+  setting_remove_permafrost_gold_cost_1_00: "x1 (デフォルト)"
+  setting_remove_permafrost_gold_cost_1_00_desc: "各伯爵領は変更に 50 @gold_icon! の金が必要です。（デフォルト）"
+  setting_remove_permafrost_gold_cost_0_75: "x0.75"
+  setting_remove_permafrost_gold_cost_0_75_desc: "各伯爵領は変更に約 38 @gold_icon! の金が必要です。"
+  setting_remove_permafrost_gold_cost_0_50: "x0.50"
+  setting_remove_permafrost_gold_cost_0_50_desc: "各伯爵領は変更に 25 @gold_icon! の金が必要です。"
+  setting_remove_permafrost_gold_cost_0_00: "無料"
+  setting_remove_permafrost_gold_cost_0_00_desc: "各伯爵領は無料で変更できます。"
+  setting_remove_permafrost_gold_cost_2_00: "x2"
+  setting_remove_permafrost_gold_cost_2_00_desc: "各伯爵領は変更に 100 @gold_icon! の金が必要です。"
+
+  rule_remove_permafrost_herd_cost: "永久凍土除去の @herd_icon! コスト"
+  setting_remove_permafrost_herd_cost_1_00: "x1 (デフォルト)"
+  setting_remove_permafrost_herd_cost_1_00_desc: "各伯爵領は変更に 500 @herd_icon! の群れが必要です。（デフォルト）"
+  setting_remove_permafrost_herd_cost_0_75: "x0.75"
+  setting_remove_permafrost_herd_cost_0_75_desc: "各伯爵領は変更に約 375 @herd_icon! の群れが必要です。"
+  setting_remove_permafrost_herd_cost_0_50: "x0.50"
+  setting_remove_permafrost_herd_cost_0_50_desc: "各伯爵領は変更に 250 @herd_icon! の群れが必要です。"
+  setting_remove_permafrost_herd_cost_0_00: "無料"
+  setting_remove_permafrost_herd_cost_0_00_desc: "各伯爵領は無料で変更できます。"
+  setting_remove_permafrost_herd_cost_2_00: "x2"
+  setting_remove_permafrost_herd_cost_2_00_desc: "各伯爵領は変更に 1000 @herd_icon! の群れが必要です。"
+
+  rule_remove_permafrost_prestige_cost: "永久凍土除去の @prestige_icon! コスト"
+  setting_remove_permafrost_prestige_cost_1_00: "x1 (デフォルト)"
+  setting_remove_permafrost_prestige_cost_1_00_desc: "各伯爵領は変更に 250 @prestige_icon! の威信が必要です。（デフォルト）"
+  setting_remove_permafrost_prestige_cost_0_75: "x0.75"
+  setting_remove_permafrost_prestige_cost_0_75_desc: "各伯爵領は変更に約 188 @prestige_icon! の威信が必要です。"
+  setting_remove_permafrost_prestige_cost_0_50: "x0.50"
+  setting_remove_permafrost_prestige_cost_0_50_desc: "各伯爵領は変更に 125 @prestige_icon! の威信が必要です。"
+  setting_remove_permafrost_prestige_cost_0_00: "無料"
+  setting_remove_permafrost_prestige_cost_0_00_desc: "各伯爵領は無料で変更できます。"
+  setting_remove_permafrost_prestige_cost_2_00: "x2"
+  setting_remove_permafrost_prestige_cost_2_00_desc: "各伯爵領は変更に 500 @prestige_icon! の威信が必要です。"
+
+  rule_allow_remove_all_permafrost_decision: "#EMP 永久凍土をすべて除去#! の決断"
+  setting_allow_remove_all_permafrost_decision_yes: "有効"
+  setting_allow_remove_all_permafrost_decision_yes_desc: "マップ上のすべての永久凍土を除去する #EMP 永久凍土をすべて除去#! の決断を有効にします。"
+  setting_allow_remove_all_permafrost_decision_no: "無効"
+  setting_allow_remove_all_permafrost_decision_no_desc: "#EMP 永久凍土をすべて除去#! の決断を無効にします。"
+
+  rule_enable_permafrost_adder: "#EMP 永久凍土追加#! を有効化"
+  setting_enable_permafrost_adder_yes: "有効"
+  setting_enable_permafrost_adder_yes_desc: "#EMP 永久凍土を追加#! の決断を有効にし、所有する任意の伯爵領に永久凍土を追加できるようにします."
+  setting_enable_permafrost_adder_no: "無効"
+  setting_enable_permafrost_adder_no_desc: "#EMP 永久凍土を追加#! の決断を無効にします。"
