--- a/localization/korean/strawbs_remove_permafrost_l_korean.yml
+++ b/localization/korean/strawbs_remove_permafrost_l_korean.yml
@@ -20,3 +20,51 @@
   strawb_add_permafrost_selection_tooltip: "백작령에 영구동토층을 추가합니다."
   strawb_add_permafrost_toast: "[text_title.GetName] 에 영구동토층이 추가되었습니다"
   strawb_add_permafrost_toast_desc: "다양한 의식을 통해 [text_title.GetName] 은 영구동토층으로 뒤덮였습니다."
+
+  rule_remove_permafrost_gold_cost: "영구동토층 제거 @gold_icon! 비용"
+  setting_remove_permafrost_gold_cost_1_00: "x1 (기본)"
+  setting_remove_permafrost_gold_cost_1_00_desc: "각 백작령을 변경하는 데 50 @gold_icon! 골드가 필요합니다. (기본)"
+  setting_remove_permafrost_gold_cost_0_75: "x0.75"
+  setting_remove_permafrost_gold_cost_0_75_desc: "각 백작령은 변경하는 데 약 38 @gold_icon! 골드가 필요합니다."
+  setting_remove_permafrost_gold_cost_0_50: "x0.50"
+  setting_remove_permafrost_gold_cost_0_50_desc: "각 백작령은 변경하는 데 25 @gold_icon! 골드가 필요합니다."
+  setting_remove_permafrost_gold_cost_0_00: "무료"
+  setting_remove_permafrost_gold_cost_0_00_desc: "각 백작령은 무료로 변경할 수 있습니다."
+  setting_remove_permafrost_gold_cost_2_00: "x2"
+  setting_remove_permafrost_gold_cost_2_00_desc: "각 백작령은 변경하는 데 100 @gold_icon! 골드가 필요합니다."
+
+  rule_remove_permafrost_herd_cost: "영구동토층 제거 @herd_icon! 비용"
+  setting_remove_permafrost_herd_cost_1_00: "x1 (기본)"
+  setting_remove_permafrost_herd_cost_1_00_desc: "각 백작령을 변경하는 데 500 @herd_icon! 가축이 필요합니다. (기본)"
+  setting_remove_permafrost_herd_cost_0_75: "x0.75"
+  setting_remove_permafrost_herd_cost_0_75_desc: "각 백작령은 변경하는 데 약 375 @herd_icon! 가축이 필요합니다."
+  setting_remove_permafrost_herd_cost_0_50: "x0.50"
+  setting_remove_permafrost_herd_cost_0_50_desc: "각 백작령은 변경하는 데 250 @herd_icon! 가축이 필요합니다."
+  setting_remove_permafrost_herd_cost_0_00: "무료"
+  setting_remove_permafrost_herd_cost_0_00_desc: "각 백작령은 무료로 변경할 수 있습니다."
+  setting_remove_permafrost_herd_cost_2_00: "x2"
+  setting_remove_permafrost_herd_cost_2_00_desc: "각 백작령은 변경하는 데 1000 @herd_icon! 가축이 필요합니다."
+
+  rule_remove_permafrost_prestige_cost: "영구동토층 제거 @prestige_icon! 비용"
+  setting_remove_permafrost_prestige_cost_1_00: "x1 (기본)"
+  setting_remove_permafrost_prestige_cost_1_00_desc: "각 백작령을 변경하는 데 250 @prestige_icon! 위신이 필요합니다. (기본)"
+  setting_remove_permafrost_prestige_cost_0_75: "x0.75"
+  setting_remove_permafrost_prestige_cost_0_75_desc: "각 백작령은 변경하는 데 약 188 @prestige_icon! 위신이 필요합니다."
+  setting_remove_permafrost_prestige_cost_0_50: "x0.50"
+  setting_remove_permafrost_prestige_cost_0_50_desc: "각 백작령은 변경하는 데 125 @prestige_icon! 위신이 필요합니다."
+  setting_remove_permafrost_prestige_cost_0_00: "무료"
+  setting_remove_permafrost_prestige_cost_0_00_desc: "각 백작령은 무료로 변경할 수 있습니다."
+  setting_remove_permafrost_prestige_cost_2_00: "x2"
+  setting_remove_permafrost_prestige_cost_2_00_desc: "각 백작령은 변경하는 데 500 @prestige_icon! 위신이 필요합니다."
+
+  rule_allow_remove_all_permafrost_decision: "#EMP 영구동토층 전체 제거#! 결정"
+  setting_allow_remove_all_permafrost_decision_yes: "사용"
+  setting_allow_remove_all_permafrost_decision_yes_desc: "지도 전체의 영구동토층을 제거하는 #EMP 영구동토층 전체 제거#! 결정을 활성화합니다."
+  setting_allow_remove_all_permafrost_decision_no: "비활성화"
+  setting_allow_remove_all_permafrost_decision_no_desc: "#EMP 영구동토층 전체 제거#! 결정을 비활성화합니다."
+
+  rule_enable_permafrost_adder: "#EMP 영구동토층 추가#! 활성화"
+  setting_enable_permafrost_adder_yes: "사용"
+  setting_enable_permafrost_adder_yes_desc: "#EMP 영구동토층 추가#! 결정을 활성화하여, 소유한 백작령에 영구동토층을 추가할 수 있습니다."
+  setting_enable_permafrost_adder_no: "비활성화"
+  setting_enable_permafrost_adder_no_desc: "#EMP 영구동토층 추가#! 결정을 비활성화합니다."
