--- a/localization/japanese/strawbs_remove_permafrost_l_japanese.yml
+++ b/localization/japanese/strawbs_remove_permafrost_l_japanese.yml
@@ -18,6 +18,7 @@
   strawb_add_permafrost: "永久凍土を呼び寄せる"
   strawb_add_permafrost_desc: "戦略的に配置された儀式を通じて、気候を操作し、任意の伯爵領を永久凍土の地に変えることができます。他の土地の特徴は維持されます。"
   strawb_add_permafrost_selection_tooltip: "伯爵領に永久凍土を追加する。"
+  strawb_add_permafrost_confirm: "禁断の儀式を開始せよ！"
   strawb_add_permafrost_toast: "[text_title.GetName] に永久凍土を追加しました"
   strawb_add_permafrost_toast_desc: "様々な儀式によって、[text_title.GetName] は永久凍土に覆われました。"
 
