--- a/localization/french/strawbs_remove_permafrost_l_french.yml
+++ b/localization/french/strawbs_remove_permafrost_l_french.yml
@@ -18,6 +18,7 @@
   strawb_add_permafrost: "Invoquer le pergélisol"
   strawb_add_permafrost_desc: "À l'aide de rituels placés stratégiquement, nous pouvons manipuler le climat pour transformer n'importe quel comté en une terre de pergélisol, tout en préservant ses autres caractéristiques."
   strawb_add_permafrost_selection_tooltip: "Ajouter du pergélisol à un comté."
+  strawb_add_permafrost_confirm: "Commencez le rituel interdit!"
   strawb_add_permafrost_toast: "Pergélisol ajouté à [text_title.GetName]"
   strawb_add_permafrost_toast_desc: "Grâce à divers rituels, [text_title.GetName] est désormais recouvert de pergélisol."
 
